--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -496,5 +496,221 @@ a:link {
 }
 
 .gif{
+  position: relative;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.banner-contain{
+  position: relative;
   width: 100%;
+  margin: 0 auto;
+}
+
+.banner-text{
+  position: absolute;
+  font-size: 24px !important;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: #fff;
+    letter-spacing: 2rem;
+}
+.banner-text-2{
+  position: absolute;
+  letter-spacing: 0.2rem;
+    top: 51%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: #fff;
+}
+
+.banner-text-3{
+  position: absolute;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: #fff;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .banner-text{
+ font-size: 14px !important;
+ letter-spacing: 0.1rem;
+  }
+  .banner-text-2{
+    margin-top: 10px;
+    font-size: 10px;
+    letter-spacing: 0;
+  }
+  
+  .banner-text-3{
+    margin-top: 16px;
+    font-size: 10px;
+  }
+} 
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px)  {
+  .banner-text{
+    font-size: 16px !important;
+    letter-spacing: 0.1rem;
+     }
+     .banner-text-2{
+       margin-top: 11px;
+       font-size: 10px;
+     }
+     
+     .banner-text-3{
+       margin-top: 20px;
+       font-size: 10px;
+     }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px)  {
+  .banner-text{
+    font-size: 16px !important;
+    letter-spacing: 0.1rem;
+     }
+     .banner-text-2{
+       margin-top: 11px;
+       font-size: 10px;
+     }
+     
+     .banner-text-3{
+       margin-top: 20px;
+       font-size: 10px;
+     }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px)  {
+  .banner-text{
+    font-size: 16px !important;
+    letter-spacing: 0.1rem;
+     }
+     .banner-text-2{
+       margin-top: 11px;
+       font-size: 10px;
+     }
+     
+     .banner-text-3{
+       margin-top: 20px;
+       font-size: 10px;
+     }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .banner-text{
+    font-size: 24px !important;
+    letter-spacing: 1rem;
+    font-family: Roboto;
+     }
+     .banner-text-2{
+       margin-top: 10px;
+       font-size: 16px;
+     }
+     
+     .banner-text-3{
+       margin-top: 20px;
+       font-size: 16px;
+     }
+}
+
+.tracking-in-expand {
+	-webkit-animation: tracking-in-expand 0.7s 1s both;
+	        animation: tracking-in-expand 0.7s 1s both;
+}
+
+@-webkit-keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.focus-in-expand {
+	-webkit-animation: focus-in-expand 0.8s 1.5s both;
+	        animation: focus-in-expand 0.8s 1.5s both;
+}
+@-webkit-keyframes focus-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes focus-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+
+
+.text-focus-in {
+	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) 2s both;
+	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) 2s both;
+}
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
 }
